# text-recognize

./: .gitignore  build_executable.py  network-config.json  package.json  requirements.txt  vercel.json
frontend/: .env.example  index.html  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: ErrorBoundary.tsx  MainWorkspace.tsx
frontend/src/components/features/: BatchProcessingPanel.tsx  ExportFloatingPanel.tsx  ExportHistoryPanel.tsx  FileUploadArea.tsx  OCRPanel.tsx  ProcessingPanel.tsx  SettingsPanel.tsx  SmartTextEditor.tsx  TextEditor.tsx
frontend/src/components/layout/: MainLayout.tsx
frontend/src/components/ui/: animated-icons.tsx  button.tsx  card.tsx  checkbox.tsx  input.tsx  loading-spinner.tsx  progress.tsx  textarea.tsx  toast.tsx  tooltip.tsx
frontend/src/hooks/: useKeyboardShortcuts.ts  useReducedMotion.ts
frontend/src/lib/: micro-interactions.ts  streamlined-processors.ts  tauri-api.ts  universal-file-api.ts  utils.ts
frontend/src/store/: app-store.ts
frontend/src/types/: global.d.ts
python_backend/: config.py  demo_improvement.py  main.py  models.py  oneocr_service.spec  paddleocr_service.spec  routes.py  video_processing.py
python_backend/api/: main_router.py  video_router.py
python_backend/core/: document_processor.py  image_preprocessor.py  ocr_instance.py  ocr_processor.py  video_processor.py
python_backend/utils/: caching.py  performance.py  text_postprocessor.py
tauri-app/: Cargo.toml  tauri.conf.json
tauri-app/capabilities/: default.json
tauri-app/src/: error.rs  lib.rs  utils.rs
tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
tauri-app/src-tauri/src/: error.rs  lib.rs  utils.rs
tauri-app/src-tauri/src/commands/: batch_commands.rs  export_commands.rs  file_commands.rs  grammar_commands.rs  mod.rs  ocr_commands.rs
tauri-app/src-tauri/src/services/: csv_exporter.rs  file_handler.rs  grammar.rs  ocr.rs
tauri-app/src/commands/: batch_commands.rs  file_commands.rs  grammar_commands.rs  mod.rs  ocr_commands.rs
tauri-app/src/services/: grammar.rs  mod.rs  ocr.rs
