[package]
name = "ocr-grammar-assistant"
version = "0.1.0"
description = "OCR & Grammar Assistant - Modern text recognition desktop application"
authors = ["OCR Assistant Team"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3.1", features = ["codegen"] }

[dependencies]
# Core Tauri dependencies
tauri = { version = "2.7.0", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Core processing dependencies - streamlined for optimal performance
image = "0.25"
imageproc = "0.25"
# Tesseract OCR - single unified OCR engine
leptess = "0.14"

# Video processing
ffmpeg-next = { version = "7.0", optional = true }

# HTTP client for LanguageTool grammar checking
reqwest = { version = "0.12", features = ["json"] }

# CSV handling
csv = "1.3"

# Error handling
anyhow = "1.0"

# Logging
log = "0.4"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6.0"
